# fastapi-book-management-api

./: .env.example  .gitignore  alembic.ini  pyproject.toml
app/: main.py
app/api/endpoints/: authors.py  books.py  categories.py
app/core/: config.py
app/db/: session.py
app/models/: author.py  book.py  category.py
app/schemas/: author.py  book.py  category.py
migrations/: env.py
migrations/versions/: 70422a8066da_init_tables_with_postgresql.py
